<!--
  ~ Created by rogergcc
  ~ Copyright Ⓒ 2019 . All rights reserved.
  -->

<resources>
    <!--<string name="app_name">Sisfaedcoh</string>-->
    <string name="app_name">Qr Inventario</string>
    <!--<string name="app_name_2">Qr Inventario </string>-->

    <!--el app_name_2 esta ocupado por la libreria dialog-->
    <!--<string name="app_name_inventario">Qr Inventario </string>-->
    <string name="action_settings">Settings</string>


    <string name="dialog_title_licenses">License</string>
    <string name="license_title_developer">Piash Sarker</string>
    <string name="license_developer_email">sarkerpt@gmail.com</string>
    <string name="license_developer_phone">+8801683193505</string>
    <string name="share">compartir</string>
    <string name="rate_app">Rate This App</string>
    <string name="bug">Submit Bug</string>
    <string name="license">License</string>
    <string name="license_title_company">Company Information</string>
    <string name="license_company">Next Innovation Soft</string>
    <string name="license_company_website">www.nextinnovationsoft.com</string>
    <string name="license_title_dev">Developer Information</string>
    <string name="message">texto</string>
    <string name="dialog_title">Scan Code Result</string>
    <string name="exit_title">Salir</string>
    <string name="ok">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="ok_title">Ok</string>
    <string name="scan_your_first">Escanee su primer código de barras o código QR para ver la información aquí.</string>
    ]
    <string name="camera_permission_granted">Camera Permisos Otorgados.</string>
    <string name="camera_permission_request">Permisos de Camara son requeridos para Barcode Scanning.</string>
    <string name="sorry_for_not_permission">Lo sentimos, no podemos escanear el código de barras sin su permiso. </string>
    <string name="swipe">Deslizar hacia abajo para actualizar Datos</string>
    <string name="app_ad_id">ca-app-pub-2932652588490084~5264077465</string>
    <string name="ad_unit_id">ca-app-pub-2932652588490084/2711610908</string>
    <string name="scan_no">Scan No #</string>
    <string name="number">1</string>
    <string name="sample_code">123123123123221</string>
    <string name="date_example">10 Nov 2017 12.12 AM</string>

    <string name="reload">Reload</string>
    <string name="settings">Settings</string>
    <string name="trash">Delete</string>
    <string name="msg_no_ticket_found">Articulo no encontrado</string>
    <string name="lbl_duration">DURATION</string>
    <string name="lbl_genre">GEN</string>
    <string name="lbl_rating">RATING</string>
    <string name="lbl_price">PRICE</string>
    <string name="btn_buy_now">BUY NOW</string>
    <string name="btn_coming_soon">COMMING SOON</string>
    <string name="title_activity_ticket">Articulo</string>

</resources>
