<!--
  ~ Created by
  ~ Copyright Ⓒ 2019 . All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/item_login"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:orderInCategory="100"
        android:title="Iniciar Sesión"
        app:showAsAction="always" />

    <item
        android:id="@+id/item_logut"

        android:orderInCategory="100"
        android:visible="true"
        android:title="Salir Sesión"
        app:showAsAction="never" />

    <item
        android:id="@+id/item_share"
        android:icon="@drawable/ic_share_black_24dp"
        android:orderInCategory="100"
        android:visible="false"
        android:title="Share"
        app:showAsAction="always" />
    <item
        android:id="@+id/item_rate_app"
        android:visible="false"
        android:orderInCategory="100"
        android:title="@string/rate_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_submit_bug"
        android:visible="false"
        android:orderInCategory="100"
        android:title="@string/bug"
        app:showAsAction="never" />
    <item
        android:id="@+id/item_license"
        android:visible="false"
        android:orderInCategory="100"
        android:title="@string/license"
        app:showAsAction="never" />
</menu>
